# feednormalize

./: .dockerignore  .env.example  .gitignore  API.txt  Cargo.toml  DEPLOYMENT.md  Dockerfile  MARKETING.md  RAPIDAPI_LAUNCH.md  README.md  docker-compose.yml  fly.toml  openapi.yaml  railway.toml  rapidapi_description.txt
migrations/: 001_create_jobs.sql  002_add_job_upload_metadata.sql  003_create_api_keys.sql  004_add_job_report_and_completed_with_errors.sql
src/: error.rs  main.rs  openapi.rs  state.rs  worker.rs
src/db/: mod.rs
src/middleware/: auth.rs  mod.rs  rate_limit.rs
src/models/: api_key.rs  job.rs  mod.rs  product.rs
src/parsers/: csv.rs  mod.rs  xml.rs
src/rate_limit/: mod.rs
src/routes/: feeds.rs  jobs.rs  mod.rs  webhooks.rs
src/services/: api_key_service.rs  job_service.rs  mod.rs  normalization.rs  storage_service.rs  upload_service.rs
src/utils/: mod.rs  parsing.rs  paths.rs
src/validation/: engine.rs  mod.rs  result.rs
