[package]
name = "feednormalize"
version = "0.1.0"
edition = "2021"
description = "Universal Product Feed Normalization API"
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
chrono = { version = "0.4", features = ["serde"] }
csv-async = { version = "1.3", features = ["tokio"] }
dotenvy = "0.15"
futures-util = "0.3"
hex = "0.4"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "migrate", "chrono", "uuid"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1", features = ["v4", "serde"] }
validator = { version = "0.19", features = ["derive"] }
